--- a/Exercises/Gewone CSS refactor naar BEM/Nano Folio/css/main.css
+++ b/Exercises/Gewone CSS refactor naar BEM/Nano Folio/css/main.css
@@ -1,10 +1,8 @@
-/*
-
-Modified: Tooplate 2122 Nano Folio
-
-https://www.tooplate.com/view/2122-nano-folio
-
-*/
+@import url("components/card.css");
+@import url("components/form.css");
+@import url("components/end-note.css");
+@import url("components/grid.css");
+@import url("components/grid-nav.css");
 
 * {
     box-sizing: border-box;
@@ -39,182 +37,7 @@ a:hover { color: #30ADAD; }
     padding: 60px 15px;
 }
 
-.card {
-    display: flex;
-    color: white;
-    padding: 50px;
-    height: 470px;
-    border-radius: 15px;
-    margin-bottom: 50px;
-}
-
-.card--bottom-spacing {
-    margin-bottom: 80px;
-}
-
-.card--center,
-.card--center-all > * {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.card--pink {
-    background-color: #F96699;
-}
-
-.card--blue {
-    background-color: #38CCCC;
-}
-
-.card--light-blue {
-    background-color: #99CCCC;
-}
-
-.card__part {
-    flex: 1 1;
-}
-
-@media (min-width: 680px) {
-    .card__size-20 {
-        width: 20%;
-    }
-
-    .card__size-40 {
-        width: 40%;
-    }
-}
-
-.card__text {
-    margin-bottom: 40px;
-}
-
-.card__link,
-.card__link:hover {
-    color: #9F6;
-}
-
-.card__address {
-    margin-bottom: 30px;
-}
-
-.card__tel {
-    margin-bottom: 40px;
-}
-
-.card__tel-link {
-    color: white
-}
-
-.card__socials {
-    display: flex;
-}
-
-.card__social-link {
-    width: 40px;
-    height: 40px;
-    margin-right: 15px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.card__social-link i {
-    color: #99CCCC;
-}
-
-.card__social-link:hover i.fa-facebook {
-    color: #3b5998;
-}
-
-.card__social-link:hover i.fa-twitter {
-    color: #00acee;
-}
-
-.card__social-link:hover i.fa-instagram {
-    color: #3f729b;
-}
 
 .wrapper {
     margin-bottom: 80px;
-}
-
-.gallery-nav {
-    text-align: right;
-    margin-bottom: 40px;
-}
-
-.gallery-nav__item {
-    display: inline-block;
-    list-style: none;
-    margin-left: 40px;
-}
-
-.gallery-nav__item .active {
-    color: #F96699;
-}
-
-.gallery {
-    margin: -10px;
-}
-
-.gallery-item {
-    border-radius: 12px;
-    margin: 10px;
-    overflow: hidden;
-}
-
-.card__contact {
-    height: auto;
-    flex-direction: column;
-    padding: 50px 20px;
-}
-
-@media (min-width: 680px) {
-    .card__contact {
-        flex-direction: row-reverse;
-    }
-}
-
-.card__contact-part {
-    padding-left: 34px;
-    padding-right: 34px;
-    width: 100%;
-}
-
-.contact {
-    color: white
-}
-
-.contact__title {
-    font-size: 1.5em;
-    font-weight: bold;
-}
-
-.contact__input {
-    font: initial;
-    font-family: "Source Sans Pro", sans-serif;
-    color: white;
-    padding: 15px 0;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    border-bottom: 1px solid white;
-    display: block;
-    width: 100%;
-}
-
-.contact__submit {
-    display: block;
-    margin-left: auto;
-}
-
-.end-note {
-    color: #999999;
-    text-align: center;
-}
-
-.end-note__link {
-    color: #999999;
 }
