--- a/Exercises/11ty/src/_includes/base.njk
+++ b/Exercises/11ty/src/_includes/base.njk
@@ -1,21 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Settings -->
     <meta charset="UTF-8">
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="Stualyttle" name="author">
+    <meta content="Project" name="description">
+    <meta content="Stualyttle" name="keywords">
+    <title>Title</title>
+    <!-- CSS -->
     <link href="/dist/main.css" rel="stylesheet">
-    <title>{{ title }} - {{ site.name }}</title>
+    <!-- Javascript -->
+    {# <script defer src="static/js/main.js"></script> #}
+    <!-- Favicons -->
+    <link href="https://lyttle.it/favicon.ico" rel="icon">
 </head>
+
 <body>
-
-{% include "components/heading.njk" %}
-{% include "components/navbar.njk" %}
-
-{% block content %}
-{% endblock %}
-
-{% include "components/footer.njk" %}
+{% block body %}{% endblock %}
 </body>
 </html>
