--- a/Exercises/11ty/src/assets/styles/main.scss
+++ b/Exercises/11ty/src/assets/styles/main.scss
@@ -1,4 +1,8 @@
-@import '../layouts';
+@import 'reset';
+@import 'defaults';
+@import 'layouts';
+@import 'components/header';
+@import 'components/footer';
 
 $primary: red;
 
