--- a/Exercises/11ty/src/_includes/base.njk
+++ b/Exercises/11ty/src/_includes/base.njk
@@ -10,9 +10,7 @@
     <title>Title</title>
     <!-- CSS -->
     <link href="/dist/main.css" rel="stylesheet">
-    <!-- Javascript -->
-    {# <script defer src="static/js/main.js"></script> #}
-    <!-- Favicons -->
+    {% block head %}{% endblock %}
     <link href="https://lyttle.it/favicon.ico" rel="icon">
 </head>
 
