--- a/Exercises/11ty/src/_includes/components/header.njk
+++ b/Exercises/11ty/src/_includes/components/header.njk
@@ -1,1 +1,23 @@
-<header>Heye</header>
+<header>
+    <section class="nav">
+        <div class="nav__wrapper">
+            <a href="#" class="nav-item nav-logo">PGM</a>
+            <nav class="main-nav">
+                <ul>
+                    <li class="nav-item">
+                        <a href="#" class="active">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Curriculum</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+</header>
