--- a/Exercises/11ty/src/assets/styles/defaults.scss
+++ b/Exercises/11ty/src/assets/styles/defaults.scss
@@ -1,35 +1,47 @@
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins Medium.woff2') format('woff2'),
+  url('/fonts/Poppins Medium.woff') format('woff');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins Regular.woff2') format('woff2'),
+  url('/fonts/Poppins Regular.woff') format('woff');
+  font-weight: 400;
+}
+
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    /* word-wrap: break-word; */
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* word-wrap: break-word; */
 }
 
 body {
-    line-height: 1;
-    font-family: Helvetica, Arial, sans-serif;
+  line-height: 1;
+  font-family: "Poppins", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem
 }
 
 h1 {
-    font-size: 3.052rem
+  font-size: 6.25rem
 }
 
 h2 {
-    font-size: 2.441rem
+  font-size: 2.625rem
 }
 
 h3 {
-    font-size: 1.953rem
-}
-
-h4 {
-    font-size: 1.563rem
-}
-
-h5 {
-    font-size: 1.563rem
+  font-size: 2.25rem
 }
 
 p {
-    font-size: 1rem
+  font-size: 1.5rem
+}
+
+a {
+  font-size: 1.75rem
 }
