--- a/Exercises/11ty/src/assets/styles/main.scss
+++ b/Exercises/11ty/src/assets/styles/main.scss
@@ -1,11 +1,16 @@
+$color-white-500: #FFFFFF;
+$color-yellow-500: #FFC400;
+$color-black-500: #000000;
+$color-red-500: #FD4505;
+$color-blue-500: #0A00FF;
+$color-gray-500: #F4F4F4;
+
 @import 'reset';
 @import 'defaults';
-@import 'layouts';
+@import 'layouts/heading-box';
+@import 'layouts/text-img';
+@import 'layouts/container';
+@import 'layouts/spread';
+@import 'layouts/socials';
 @import 'components/header';
 @import 'components/footer';
-
-$primary: red;
-
-body {
-  background-color: $primary;
-}
