--- a/Exercises/11ty/src/_includes/layouts/base.njk
+++ b/Exercises/11ty/src/_includes/layouts/base.njk
@@ -7,8 +7,7 @@
     <meta content="Stualyttle" name="author">
     <meta content="Project" name="description">
     <meta content="Stualyttle" name="keywords">
-    <title>Title</title>
-    <!-- CSS -->
+    <title>{{ title }} | PGM</title>
     <link href="/dist/main.css" rel="stylesheet">
     {% block head %}{% endblock %}
     <link href="https://lyttle.it/favicon.ico" rel="icon">
