--- a/Exercises/11ty/src/_includes/components/header.njk
+++ b/Exercises/11ty/src/_includes/components/header.njk
@@ -1,21 +1,14 @@
 <header>
     <section class="nav">
         <div class="nav__wrapper">
-            <a href="#" class="nav-item nav-logo">PGM</a>
+            <a href="/" class="nav-item nav-logo">PGM</a>
             <nav class="main-nav">
                 <ul>
-                    <li class="nav-item">
-                        <a href="#" class="active">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">Curriculum</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">Contact</a>
-                    </li>
+                    {% for p in collections.page %}
+                        <li class="nav-item">
+                            <a href="{{ p.url }}"{% if page.url === p.url %} class="active"{% endif %}>{{ p.data.title }}</a>
+                        </li>
+                    {% endfor %}
                 </ul>
             </nav>
         </div>
