--- a/Exercises/11ty/src/assets/styles/main.scss
+++ b/Exercises/11ty/src/assets/styles/main.scss
@@ -14,3 +14,4 @@ $color-gray-500: #F4F4F4;
 @import 'layouts/socials';
 @import 'components/header';
 @import 'components/footer';
+@import 'components/btn';
