--- a/Exercises/11ty/src/_includes/components/text-img.njk
+++ b/Exercises/11ty/src/_includes/components/text-img.njk
@@ -1,11 +1,16 @@
-{% if headingBox.container %}<div class="container">{% endif %}
-<section class="text-img">
-{% if textImg.reverse %}
-    <img class="text-img__img" src="{{ textImg.img }}" alt="{{ textImg.imgAlt }}">
-    <p class="text-img__text">{{ textImg.text }}</p>
-{% else %}
-    <p class="text-img__text">{{ textImg.text }}</p>
-    <img class="text-img__img" src="{{ textImg.img }}" alt="{{ textImg.imgAlt }}">
+{% if textImg.container %}
+<div class="container">
+    {% endif %}
+    <section class="text-img">
+        <span class="text-img__text-box">
+            <h2 class="text-img__title">{{ textImg.title }}</h2>
+            <p class="text-img__text">{{ textImg.text | safe }}</p>
+            {% if textImg.btn %}
+                <button class="btn">{{ textImg.btn }}</button>
+            {% endif %}
+        </span>
+        <img class="text-img__img" src="/dist/images/{{ textImg.img }}" alt="{{ textImg.imgAlt }}">
+    </section>
+    {% if textImg.container %}
+</div>
 {% endif %}
-</section>
-{% if headingBox.container %}</div>{% endif %}
