--- a/Exercises/11ty/src/index.njk
+++ b/Exercises/11ty/src/index.njk
@@ -1,13 +1,15 @@
 ---
 title: Home
 headingBox:
-    title: "heye"
-    subtitle: "Eggegegeg?"
+    title: PGM
+    text: Graduaat Programmeren?
     container: true
 textImg:
-    text: 'Heye'
-    img: '/dist/images/artevelde.png'
-    imgAlt: 'idk to be honnest'
+    title: Wat is graduaat programmeren?
+    text: Tijdens het Graduaat Programmeren leer je het zichtbare (front-end) en onzichtbare (backend) deel van web- en mobiele toepassingen ontwikkelen. <br><br>Je wordt specialist in JavaScript, HTML, CSS en vult jouw skills aan met o.a. PHP, Python, UI/UX. Naast deze technische kant, vergaar je ook algemene ICT-skills. <br><br>Je leert ook hoe digital agencies werken en wat jouw rol hierbinnen zal zijn.
+    img: computer.png
+    imgAlt: Person typing/coding at laptop.
+    btn: Kom naar de infodag
     container: true
 tags: page
 ---
