--- a/Exercises/11ty/src/assets/styles/components/footer.scss
+++ b/Exercises/11ty/src/assets/styles/components/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   color: $color-white-500;
-  margin: 0 1rem;
+  margin: 0 1rem 1rem;
 
   & > * { // TODO: The right way to do this?
     background-color: #0A00FF;
