--- a/Exercises/11ty/src/assets/styles/main.scss
+++ b/Exercises/11ty/src/assets/styles/main.scss
@@ -8,6 +8,7 @@ $color-gray-500: #F4F4F4;
 @import 'reset';
 @import 'defaults';
 @import 'layouts/heading-box';
+@import 'layouts/center-box';
 @import 'layouts/text-img';
 @import 'layouts/container';
 @import 'layouts/spread';
