--- a/Exercises/11ty/src/assets/styles/components/btn.scss
+++ b/Exercises/11ty/src/assets/styles/components/btn.scss
@@ -2,4 +2,9 @@
   padding: 1rem 4rem;
   border-radius: 3rem;
   background-color: $color-white-500;
+
+  &.btn-border {
+    border: 1px solid $color-black-500;
+  }
 }
+
