--- a/Exercises/11ty/src/assets/styles/defaults.scss
+++ b/Exercises/11ty/src/assets/styles/defaults.scss
@@ -20,7 +20,7 @@
 }
 
 body {
-  line-height: 1;
+  line-height: 2.2rem;
   font-family: "Poppins", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 1.5rem
