--- a/Exercises/11ty/src/assets/styles/components/btn.scss
+++ b/Exercises/11ty/src/assets/styles/components/btn.scss
@@ -1,6 +1,7 @@
 .btn {
   padding: 1rem 4rem;
   border-radius: 3rem;
+  color: $color-black-500;
   background-color: $color-white-500;
 
   &.btn-border {
