--- a/Exercises/11ty/src/assets/styles/defaults.scss
+++ b/Exercises/11ty/src/assets/styles/defaults.scss
@@ -20,19 +20,19 @@
 }
 
 body {
-  line-height: 2.2rem;
+  line-height: 1.5;
   font-family: "Poppins", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 1.5rem
 }
 
 h1 {
-  font-size: 6.25rem
+  font-weight: bold;
+  font-size: 4.3rem
 }
 
 h2 {
   font-weight: bold;
-  margin-bottom: .8rem;
   font-size: 2.625rem
 }
 
@@ -46,4 +46,18 @@ p {
 
 a {
   font-size: 1.75rem
+}
+
+form,
+input,
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input,
+textarea {
+  background-color: white;
+  margin-bottom: 1.2rem;
+  border-radius: .22rem;
 }
