--- a/Exercises/11ty/src/contact.njk
+++ b/Exercises/11ty/src/contact.njk
@@ -22,5 +22,7 @@ tags: page
 {% block content %}
     {% include "components/heading-box.njk" %}
     {% include "components/text-img.njk" %}
-    <p class="text__big">Vind ons terug op alle sociale media als <span class="text__yellow">Graduaat Programmeren Artevelde.</span></p>
+    <section class="highlight container">
+        <p class="text__big">Vind ons terug op alle sociale media als <span class="text__yellow">Graduaat Programmeren Artevelde.</span></p>
+    </section>
 {% endblock %}
