--- a/Exercises/11ty/src/contact.njk
+++ b/Exercises/11ty/src/contact.njk
@@ -11,8 +11,8 @@ textImg:
     title: Geen zin om te chatten?<br>Een mailtje versturen kan ook!
     text: <form><label for="name">Naam</label><input type="text" id="name"><label for="email">Emailadres</label><input type="email" id="email"><label for="msg">Bericht</label><textarea id="msg" rows="3"></textarea></form>
     img: contact.png
-    imgAlt: Person typing/coding at laptop.
-    btn: Kom naar de infodag
+    imgAlt: Using smartphone.
+    btn: Bericht versturen
     container: true
 tags: page
 ---
