--- a/Exercises/11ty/src/blog/index.njk
+++ b/Exercises/11ty/src/blog/index.njk
@@ -3,11 +3,13 @@ title: Blog
 description: eeee
 image: laptop.jpg
 tags: page
+highlight: Vind ons terug op alle sociale media als <span class="text__yellow">Graduaat Programmeren Artevelde.</span>
 ---
 
 {% extends 'layouts/page.njk' %}
 
-{% block content %}
+{% block content
+    {% include "components/highlight.njk" %}
     <ul>
     {% for p in collections.post %}
         <li>
