--- a/Exercises/11ty/src/blog/index.njk
+++ b/Exercises/11ty/src/blog/index.njk
@@ -1,19 +1,21 @@
 ---
 title: Blog
-description: eeee
-image: laptop.jpg
+highlight: <span class="text__yellow">Keeping up</span> with the GDM’ers
 tags: page
-highlight: Vind ons terug op alle sociale media als <span class="text__yellow">Graduaat Programmeren Artevelde.</span>
 ---
 
 {% extends 'layouts/page.njk' %}
 
-{% block content
+{% block content %}
     {% include "components/highlight.njk" %}
-    <ul>
+    <ul class="posts container">
     {% for p in collections.post %}
-        <li>
-            <a href="{{ p.url }}">{{ p.data.title }}</a>
+        <li class="posts__post">
+            <h3 class="posts__title">{{ p.data.title }}</h3>
+            <div class="posts__content">
+                <span class="posts__description">{{ p.data.description }}</span>
+                <a class="posts__read-more" href="{% if p.url %}{{ p.url }}{% else %}#{% endif %}">Lees meer</a>
+            </div>
         </li>
     {% endfor %}
     </ul>
