--- a/Exercises/11ty/src/assets/styles/main.scss
+++ b/Exercises/11ty/src/assets/styles/main.scss
@@ -7,6 +7,7 @@ $color-gray-500: #F4F4F4;
 
 @import 'reset';
 @import 'defaults';
+@import 'layouts/post';
 @import 'layouts/posts';
 @import 'layouts/spread';
 @import 'layouts/socials';
