--- a/Exercises/11ty/src/curriculum/index.njk
+++ b/Exercises/11ty/src/curriculum/index.njk
@@ -16,4 +16,14 @@ tags: page
             </li>
         {% endfor %}
     </ul>
+    <img class="container gap" src="/dist/images/team.png" alt="Meeting">
+    <section class="text-block container gap">
+        <h2>Evaluatie</h2>
+        <p>
+            Je docenten en begeleiders evalueren je op verschillende manieren doorheen de opleiding:<br><br>
+            Voor praktijkgerichte opleidingsonderdelen als Web Design en Business & Communication for IT maken je docenten gebruik van permanente evaluatie.<br><br>
+            In bepaalde gevallen dien je ook een portfolio met je werk aan te leggen.<br><br>
+            Evaluatie doorheen het jaar gaat soms gepaard met een mondeling of schriftelijk examen (op papier of achter je computer). De hoeveelheid leerstof blijft goed behapbaar dankzij de opdrachten doorheen het jaar.
+        </p>
+    </section>
 {% endblock %}
