--- a/Exercises/11ty/src/assets/styles/main.scss
+++ b/Exercises/11ty/src/assets/styles/main.scss
@@ -34,3 +34,14 @@ $color-gray-500: #F4F4F4;
   background-color: $color-gray-500;
   padding: 6rem 4rem;
 }
+
+.text-block {
+  display: block;
+  width: 60rem;
+  margin: 8rem auto;
+  padding-right: 10rem;
+
+  & > * {
+    margin-bottom: 2rem
+  }
+}
