--- a/Exercises/PGM Website/src/contact.njk
+++ b/Exercises/PGM Website/src/contact.njk
@@ -16,6 +16,9 @@ textImg:
     container: true
 highlight: Vind ons terug op alle sociale media als <span class="text__yellow">Graduaat Programmeren Artevelde.</span>
 tags: page
+eleventyNavigation:
+    key: Contact
+    order: 4
 ---
 
 {% extends "layouts/page.njk" %}
