--- a/Exercises/PGM Website/src/curriculum/index.njk
+++ b/Exercises/PGM Website/src/curriculum/index.njk
@@ -2,6 +2,9 @@
 title: Curriculum
 highlight: In ons curriculum staat <span class="text__yellow">front-end webdevelopment</span> centraal.
 tags: page
+eleventyNavigation:
+    key: Curriculum
+    order: 3
 ---
 
 {% extends 'layouts/page.njk' %}
