--- a/Exercises/PGM Website/src/assets/styles/layouts/_post.scss
+++ b/Exercises/PGM Website/src/assets/styles/layouts/_post.scss
@@ -1,14 +1,15 @@
 .posts {
   padding: 1rem 5rem;
 
-  & > *:not(:last-child) {
-    border-bottom: 2px solid $color-gray-500;
-  }
 
   .posts__post {
     display: flex;
     padding: 4rem 0;
     justify-content: space-between;
+
+    &:not(:last-child) {
+      border-bottom: 2px solid $color-gray-500;
+    }
   }
 
   .posts__title {
